fixed overflow issue in view modules page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -14,10 +15,11 @@
 }
 .leaflet-container{
   width: 100%;
-  height: 100vh;
+
   top: 50px;
+  bottom: 0px;
   overflow: hidden;
-  position: fixed;
+  position: absolute;
 }
 
 .App-header {
